--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,7 @@
-remote_theme: "mmistakes/minimal-mistakes@v4.25.0"
+source "https://rubygems.org"
+
+gem "github-pages", group: :jekyll_plugins
+gem "jekyll-include-cache", group: :jekyll_plugins
+
 title: ClearScan
 description: OCR for the people who needs it
