--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,3 @@
-source "https://rubygems.org"
-
-gem "github-pages", group: :jekyll_plugins
-gem "jekyll-include-cache", group: :jekyll_plugins
-
+theme: jekyll-theme-architect
 title: ClearScan
 description: OCR for the people who needs it
