--- a/clearscan/package.json
+++ b/clearscan/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.2.0",
+    "framer-motion": "^12.10.4",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
