--- a/clearscan/package.json
+++ b/clearscan/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
     "framer-motion": "^12.10.4",
     "next": "15.3.1",
     "postcss": "^8.5.3",
