--- a/clearscan/package.json
+++ b/clearscan/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "framer-motion": "^12.10.4",
+    "lucide-react": "^0.511.0",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
